# rikkahub-next

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: gpui-docs-learner.md
.claude/skills/gpui/: SKILL.md  core.md
.claude/skills/gpui/gpui-component/: button.md  input.md  select.md  sidebar.md  theme.md  virtual_list.md
crates/core/: Cargo.toml
crates/core/src/: models.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: client.rs  main.rs
crates/rikkahub-api/: Cargo.toml
crates/rikkahub-api/src/: handlers.rs  lib.rs  state.rs
crates/rikkahub-core/: Cargo.toml
crates/rikkahub-core/src/: lib.rs
crates/rikkahub-desktop/: Cargo.toml
crates/rikkahub-desktop/src/: client.rs
crates/rikkahub-server/: Cargo.toml
crates/rikkahub-server/src/: main.rs
crates/server/: .env.example  Cargo.toml
crates/server/migrations/: 001_init.sql  20250110000001_init.sql
crates/server/src/: handlers.rs  lib.rs  main.rs  state.rs
crates/server/src/config/: mod.rs
crates/server/src/database/: mod.rs
crates/server/src/entities/: group.rs  mod.rs  rbac.rs  user.rs
crates/server/src/handlers/: auth.rs  mod.rs
crates/server/src/middleware/: auth.rs  jwt.rs  mod.rs
crates/server/src/models/: group.rs  group_permission.rs  mod.rs  setting.rs  user.rs  user_group.rs
crates/server/src/repositories/: group.rs  mod.rs  rbac.rs  user.rs
crates/server/src/routes/: mod.rs
crates/server/src/services/: mod.rs  user.rs
crates/server/src/utils/: jwt.rs  mod.rs
crates/shared/: Cargo.toml
desktop/: Cargo.toml
desktop/crates/core/: Cargo.toml
desktop/crates/core/src/: error.rs
desktop/crates/desktop/: Cargo.toml
desktop/crates/desktop/src/: app.rs
docs/: GPUI.md
server/: .env.example  go.mod  go.sum
server/cmd/server/: main.go
server/internal/config/: config.go
server/internal/database/: database.go
server/internal/handlers/: auth.go
server/internal/middleware/: auth.go  i18n.go
server/internal/models/: group.go  group_permission.go  migrate.go  oauth_account.go  setting.go  user.go  user_group.go
server/internal/services/: auth.go  i18n.go  jwt.go  password.go  settings.go
server/pkg/crypto/: password.go
server/pkg/logging/: fiber_middleware.go  gorm_logger.go  logger.go
src/: main.rs
