[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/desktop",
    "crates/server",
]
default-members = ["crates/desktop"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# 内部 crates
core = { path = "crates/core" }

# 通用
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 桌面端
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"

# HTTP 客户端
reqwest = { version = "0.13.1", features = ["json"] }

# 服务端 Web 框架
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# 配置
dotenvy = "0.15"

# 工具
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3.6"
directories = "6.0"

# 密码哈希
argon2 = "0.5"
