[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# 内部 crates
core = { path = "crates/core" }

# 通用
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 桌面端
gpui = "0.2.2"
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json"] }

# 工具
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
