[package]
name = "rikkahub-api"
version.workspace = true
edition.workspace = true

[dependencies]
rikkahub-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
