[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
core.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
axum.workspace = true
axum-extra.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dotenvy.workspace = true
casbin.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
argon2.workspace = true
