[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rikkahub"
path = "src/main.rs"

[dependencies]
core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
gpui.workspace = true
gpui-component.workspace = true
uuid = "1.19.0"
